Week Seven Update
Uploaded HTML, CSS and JS files for Week Seven work, creating a mock shopping website

Uploaded updated Index and Download webpages to include Week Seven work

--- a/HTML_Guides/WebGuidesDownload.html
+++ b/HTML_Guides/WebGuidesDownload.html
@@ -50,6 +50,11 @@
     <a href="WeekFive/td_style_pri.css" download>CSS File</a><br>
     <a href="WeekFive/app.js_pri" download>JS File</a>
 
+    <p>Week Seven - 7th March 2023</p>
+    <a href="WeekSeven/index.html" download>Mock Shopping Website</a><br>
+    <a href="WeekSeven/shop_style.css" download>CSS File</a><br>
+    <a href="WeekSeven/shop_script.js" download>JS File</a>
+
     <h3>Click Here To View Any of These Files</h3>
     <form action="WebGuidesIndex.html">
         <input type = "submit" value = "Index" formtarget = "_self"/>
