--- a/HTML_Guides/WebGuidesIndex.html
+++ b/HTML_Guides/WebGuidesIndex.html
@@ -51,6 +51,11 @@
     <a href="WeekFive/td_style_pri.css">CSS File</a><br>
     <a href="WeekFive/app.js_pri">JS File</a>
 
+    <p>Week Seven - 7th March 2023</p>
+    <a href="WeekSeven/index.html">Mock Shopping Website</a><br>
+    <a href="WeekSeven/shop_style.css">CSS File</a><br>
+    <a href="WeekSeven/shop_script.js">JS File</a>
+
     <h3>Click Here To Download Any of These Files</h3>
     <form action="WebGuidesDownload.html">
         <input type = "submit" value = "Downloads" formtarget = "_self"/>
