--- a/HTML_Guides/WebGuidesDownload.html
+++ b/HTML_Guides/WebGuidesDownload.html
@@ -55,6 +55,39 @@
     <a href="WeekSeven/shop_style.css" download>CSS File</a><br>
     <a href="WeekSeven/shop_script.js" download>JS File</a>
 
+    <p>Week Eight - 14th March 2023</p>
+    <a href="WeekEight/responsive.html" download>Responsive Web Page</a><br>
+    <a href="WeekEight/response_style.css" download>CSS File</a><br>
+    <a href="WeekEight/response_script.js" download>JS File</a>
+
+    <p>Week Nine - 21st March 2023</p>
+    <p3>Responsive Web Page Techniques</p3><br>
+    <a href="WeekNine/adaptive.html" download>Adaptive</a><br>
+    <a href="WeekNine/breakpoint.html" download>Breakpoint</a><br>
+    <a href="WeekNine/combination.html" download>Combination</a><br>
+    <a href="WeekNine/flexbox.html" download>Flexbox</a><br>
+    <a href="WeekNine/grid.html" download>Grid</a><br>
+    <a href="WeekNine/land-port.html" download>Landscape/Portrait</a>
+
+    <p>Week 10 - 28th March 2023</p>
+    <p3>Responsive Web Page Techniques Part 2</p3><br>
+    <p3>Cards and Flexbox</p3><br>
+    <a href="WeekTen/cards.html" download>Cards</a><br>
+    <a href="WeekTen/flexbox-component.html" download>Flexbox</a><br>
+    <a href="WeekTen/card-flex.html" download>Flex Cards</a><br>
+    <p3>Headings and Lines</p3><br>
+    <a href="WeekTen/heading.html" download>Heading</a><br>
+    <a href="WeekTen/lineheight.html" download>Line Height</a><br>
+    <a href="WeekTen/linelength.html" download>Line Length</a><br>
+    <p3>Text</p3><br>
+    <a href="WeekTen/textsize.html" download>Text Size</a><br>
+    <a href="WeekTen/scaletextlimit.html" download>Scale Text With Limit</a><br>
+    <a href="WeekTen/scaletextresizeable.html" download>Resizable Scale Text</a><br>
+    <a href="WeekTen/scaletextvw.html" download>Scale Text With Viewpoint</a><br>
+    <p3>Images</p3><br>
+    <a href="WeekTen/contrainingimages.html" download>Constraining Images</a><br>
+    <a href="WeekTen/wideimage.html" download>Wide Images</a>
+
     <h3>Click Here To View Any of These Files</h3>
     <form action="WebGuidesIndex.html">
         <input type = "submit" value = "Index" formtarget = "_self"/>
