--- a/HTML_Guides/WebGuidesIndex.html
+++ b/HTML_Guides/WebGuidesIndex.html
@@ -56,6 +56,39 @@
     <a href="WeekSeven/shop_style.css">CSS File</a><br>
     <a href="WeekSeven/shop_script.js">JS File</a>
 
+    <p>Week Eight - 14th March 2023</p>
+    <a href="WeekEight/responsive.html">Responsive Web Page</a><br>
+    <a href="WeekEight/response_style.css">CSS File</a><br>
+    <a href="WeekEight/response_script.js">JS File</a>
+
+    <p>Week Nine - 21st March 2023</p>
+    <p3>Responsive Web Page Techniques Part 1</p3><br>
+    <a href="WeekNine/adaptive.html">Adaptive</a><br>
+    <a href="WeekNine/breakpoint.html">Breakpoint</a><br>
+    <a href="WeekNine/combination.html">Combination</a><br>
+    <a href="WeekNine/flexbox.html">Flexbox</a><br>
+    <a href="WeekNine/grid.html">Grid</a><br>
+    <a href="WeekNine/land-port.html">Landscape/Portrait</a>
+
+    <p>Week 10 - 28th March 2023</p>
+    <p3>Responsive Web Page Techniques Part 2</p3><br>
+    <p3>Cards and Flexbox</p3><br>
+    <a href="WeekTen/cards.html">Cards</a><br>
+    <a href="WeekTen/flexbox-component.html">Flexbox</a><br>
+    <a href="WeekTen/card-flex.html">Flex Cards</a><br>
+    <p3>Headings and Lines</p3><br>
+    <a href="WeekTen/heading.html">Heading</a><br>
+    <a href="WeekTen/lineheight.html">Line Height</a><br>
+    <a href="WeekTen/linelength.html">Line Length</a><br>
+    <p3>Text</p3><br>
+    <a href="WeekTen/textsize.html">Text Size</a><br>
+    <a href="WeekTen/scaletextlimit.html">Scale Text With Limit</a><br>
+    <a href="WeekTen/scaletextresizeable.html">Resizable Scale Text</a><br>
+    <a href="WeekTen/scaletextvw.html">Scale Text With Viewpoint</a><br>
+    <p3>Images</p3><br>
+    <a href="WeekTen/contrainingimages.html">Constraining Images</a><br>
+    <a href="WeekTen/wideimage.html">Wide Images</a>
+
     <h3>Click Here To Download Any of These Files</h3>
     <form action="WebGuidesDownload.html">
         <input type = "submit" value = "Downloads" formtarget = "_self"/>
