--- a/Extra/mi-linux_index.html
+++ b/Extra/mi-linux_index.html
@@ -13,6 +13,9 @@
 <a href="4CS017/prototype2.html">Weather App Version 2</a><br>
 <a href="4CS017/prototype3.html">Weather App Version 3</a>
 <br>
+<p>5CS020 - Human Computer Intereaction</p>
+<a href="5CS020/HCI_Assignment">E-commerce Website</a>
+<br>
 <p>5CS023 - Web Development</p>
 <a href="5CS023/homepage.php">Trophy Tracker Homepage</a><br>
 <a href="5CS023/mainpage.php">Trophy Tracker Mainpage</a>
@@ -21,7 +24,9 @@
 <a href="HTML_Guides/WebGuidesIndex">Web Guides Index</a>
 <br>
 <p>Personal Projects</p>
-<a href="PersonalProjects/Calc.html">JS Calculator</a>
+<a href="PersonalProjects/Calc.html">JS Calculator</a><br>
+<a href="PersonalProjects/IconicTabBar.html">Iconic Tab Bar</a><br>
+<a href="PersonalProjects/csscards.html">Responsive CSS Cards</a>
 
 </body>
 </html>
