Updated Mi-Linux Index
Included links to new projects

--- a/Extra/mi-linux_index.html
+++ b/Extra/mi-linux_index.html
@@ -26,7 +26,10 @@
 <p>Personal Projects</p>
 <a href="PersonalProjects/Calc.html">JS Calculator</a><br>
 <a href="PersonalProjects/IconicTabBar.html">Iconic Tab Bar</a><br>
-<a href="PersonalProjects/csscards.html">Responsive CSS Cards</a>
+<a href="PersonalProjects/csscards.html">Responsive CSS Cards</a><br>
+<a href="PersonalProjects/bookcase.php">Book Catalogue</a><br>
+<a href="PersonalProjects/SongTitleGame.html">Song Title Guessing Game</a><br>
+<a href="PersonalProjects/BookCoverSearch.html">Book Cover Search</a>
 
 </body>
 </html>
