--- a/Extra/mi-linux_index.html
+++ b/Extra/mi-linux_index.html
@@ -27,6 +27,10 @@
 <a href="PersonalProjects/Calc.html">JS Calculator</a><br>
 <a href="PersonalProjects/IconicTabBar.html">Iconic Tab Bar</a><br>
 <a href="PersonalProjects/csscards.html">Responsive CSS Cards</a><br>
+<a href="PersonalProjects/pitch.html">Football Pitch</a><br>
+<a href="PersonalProjects/clock.html">Clock</a><br><br>
+<a href="PersonalProjects/bja.py">Blackjack Game (Python)</a><br>
+<a href="PersonalProjects/pc_info.py">PC Info (Python)</a><br><br>
 <a href="PersonalProjects/bookcase.php">Book Catalogue</a><br>
 <a href="PersonalProjects/SongTitleGame.html">Song Title Guessing Game</a><br>
 <a href="PersonalProjects/BookCoverSearch.html">Book Cover Search</a>
