Added new images, added new pages, edited some pages for new links

--- a/6CS007/products/pages/helpmeet.html
+++ b/6CS007/products/pages/helpmeet.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>View Pen</title>
+    <title>View Book</title>
     <link rel="stylesheet" href="http://localhost/6CS007/style.css">
     <link rel="icon" type="image/x-icon" href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/6CS007.png">
 </head>
@@ -33,8 +33,8 @@
 
         <div class="grid-container" style="grid-template-columns: 3; grid-template-rows: 3;">
             <div class="item1">
-                <img src="../pens/carchelemanbllpt.jpeg">
-                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">Carche Leman Ballpoint (Pen)</figcaption>
+                <img src="../books/helpmeet.jpeg">
+                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">Helpmeet (Paperback)</figcaption>
             </div>
             <div class="item2" style="text-align: center;">
                 2
