--- a/6CS007/products/pages/vsign.html
+++ b/6CS007/products/pages/vsign.html
@@ -33,8 +33,8 @@
 
         <div class="grid-container" style="grid-template-columns: 3; grid-template-rows: 3;">
             <div class="item1">
-                <img src="../pens/carchelemanbllpt.jpeg">
-                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">Carche Leman Ballpoint (Pen)</figcaption>
+                <img src="../pens/vsign.jpeg">
+                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">V-Sign (Pen)</figcaption>
             </div>
             <div class="item2" style="text-align: center;">
                 2
