--- a/6CS007/products/pages/alstarfnt.html
+++ b/6CS007/products/pages/alstarfnt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>View Pen</title>
-    <link rel="stylesheet" href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/style.css">
+    <link rel="stylesheet" href="http://localhost/6CS007/style.css">
     <link rel="icon" type="image/x-icon" href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/6CS007.png">
 </head>
 
@@ -12,14 +12,16 @@
         <a href="javacript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
         <a class="settingsbtn" onclick="openSettings()">&#9881;</a>
         <br><br>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Home.html">Home</a>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Products.html">Products</a>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Contact.html">Contact Us</a>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Account.html">Account</a>
+        <a href="http://localhost/6CS007/Home.html">Home</a>
+        <a href="http://localhost/6CS007/Products.html">Products</a>
+        <a href="http://localhost/6CS007/Contact.html">Contact Us</a>
+        <a href="http://localhost/6CS007/Account.html">Account</a>
         <br><br><br>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Help.html">Help</a>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Partners.html">Partners</a>
-        <a href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/Legal.html">Legal</a>
+        <a href="http://localhost/6CS007/Help.html">Help</a>
+        <a href="http://localhost/6CS007/Partners.html">Partners</a>
+        <a href="http://localhost/6CS007/Legal.html">Legal</a>
+        <br><br><br>
+		<a id="google_translate_element"></a>
     </div>
 
     <div id="MainBody">
@@ -32,7 +34,7 @@
         <div class="grid-container" style="grid-template-columns: 3; grid-template-rows: 3;">
             <div class="item1">
                 <img src="../pens/alstarfnt.jpeg">
-                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">All-Star Fountain </figcaption>
+                <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">All-Star Fountain (Pen)</figcaption>
             </div>
             <div class="item2" style="text-align: center;">
                 2
@@ -49,20 +51,17 @@
         </div>
     </div>
 
-    <script>
-    function openNav() {
-        document.getElementById("SideNav").style.width = "90%";
-        document.getElementById("main").style.marginLeft = "90%";
-    }
-
-    function closeNav() {
-        document.getElementById("SideNav").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
-    }
-
-    function openSettings() {
-        window.location = 'https://mi-linux.wlv.ac.uk/~2112834/6CS007/Settings.html';
-    }
+    <script src="http://localhost/6CS007/function.js">
     </script>
+	<script>
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({
+			pageLanguage: 'en',
+			 autoDisplay: 'true',
+			layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
+		}, 'google_translate_element');
+	}
+	</script>
+	<script src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
 </body>
 </html>
