--- a/6CS007/products/pages/helpmeet.html
+++ b/6CS007/products/pages/helpmeet.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/6CS007.png">
 </head>
 
-<body>
+<body onkeypress="keyboardAcc(event)">
     <div id="SideNav" class="sidenav">
         <a href="javacript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
         <a class="settingsbtn" onclick="openSettings()">&#9881;</a>
@@ -25,10 +25,10 @@
     </div>
 
     <div id="MainBody">
-        <header>
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-            <span style="font-size:30px;cursor:pointer" onclick="openSettings()"><br>&#9881;</span>
-            <h1>Miller's Books & Things</h1>
+        <header id="header">
+            <span id="icn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            <span id="icn2" style="font-size:30px;cursor:pointer" onclick="openSettings()"><br>&#9881;</span>
+            <h1 id="title">Miller's Books & Things</h1>
         </header>
 
         <div class="grid-container" style="grid-template-columns: 3; grid-template-rows: 3;">
