--- a/6CS007/products/pages/nameofthewind.html
+++ b/6CS007/products/pages/nameofthewind.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="https://mi-linux.wlv.ac.uk/~2112834/6CS007/6CS007.png">
 </head>
 
-<body>
+<body onkeypress="keyboardAcc(event)">
     <div id="SideNav" class="sidenav">
         <a href="javacript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
         <a class="settingsbtn" onclick="openSettings()">&#9881;</a>
@@ -25,10 +25,10 @@
     </div>
 
     <div id="MainBody">
-        <header>
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-            <span style="font-size:30px;cursor:pointer" onclick="openSettings()"><br>&#9881;</span>
-            <h1>Miller's Books & Things</h1>
+        <header id="header">
+            <span id="icn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            <span id="icn2" style="font-size:30px;cursor:pointer" onclick="openSettings()"><br>&#9881;</span>
+            <h1 id="title">Miller's Books & Things</h1>
         </header>
 
         <div class="grid-container" style="grid-template-columns: 3; grid-template-rows: 3;">
@@ -36,17 +36,26 @@
                 <img src="../books/nameofthewind.jpeg">
                 <figcaption style="text-align: left; margin-left: 10px; width: auto !important;">The Name of The Wind (Paperback)</figcaption>
             </div>
-            <div class="item2" style="text-align: center;">
-                2
+            <div class="item2" style="text-align: center; background-color: lightgray;">
+                <p>The Name of The Wind</p>
+                <p>Authored by: Patrick Rothfuss</p>
+                <p>Origninally Published on: March 27th, 2007</p>
+                <p>Origninally Published by: DAW Books</p>
             </div>
-            <div class="item3" style="text-align: center;">
-                3
+            <div class="item3" style="text-align: center; background-color: lightgray;">
+                <h1><b>£9.99</b></h1>
             </div>
-            <div class="item4" style="text-align: center;">
-                4
+            <div class="item4" style="text-align: center; background-color: lightgray;">
+                <br><p>Told in Kvothe's own voice, this is the tale of the magically gifted young man who grows to be the most notorious wizard his world has ever seen.</p>
+                <p>The intimate narrative of his childhood in a troupe of traveling players, his years spent as a near-feral orphan in a crime-ridden city, his daringly brazen yet successful bid to enter a legendary school of magic, and his life as a fugitive after the murder of a king form a gripping coming-of-age story unrivaled in recent literature.</p>
+                <p>A high-action story written with a poet's hand, The Name of the Wind is a masterpiece that will transport readers into the body and mind of a wizard.</p>
+                <br>
+                <p>Genres: Fantasy, Fiction, Epic Fantasy, High Fantasy, Magic</p>
             </div>
-            <div class="item5" style="text-align: center;">
-                5
+            <div class="item5" style="text-align: center; background-color: lightgray;">
+                <p><small>Rothfuss, P. (2010). The Name of the Wind: The Kingkiller Chronicle: Book 1. United Kingdom: Orion.</small></p>
+                <p><small>Image Courtesy of Goodreads. https://www.goodreads.com/</small></p>
+                <p><small>All Rights: Patrick Rothfuss, DAW Books, Orion Publishing Group, Goodreads</small></p>
             </div>
         </div>
     </div>
